<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >



    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefallowpushnotificaiton"
            android:summary="@string/pref_allow_pushnotificaiton_summary"
            android:title="@string/pref_allow_pushnotificaiton">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefallowpushnotificaitonpopup"
            android:summary="@string/pref_allow_notification_popup_summary"
            android:title="@string/pref_allow_notification_popup" >
        </CheckBoxPreference>


    </PreferenceCategory>

</PreferenceScreen>