<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- These settings headers are only used on tablets. -->
    <header android:title="Set your preferance" />
    <header
        android:fragment="com.example.tiuadmin.simplysafeconusmerapp.User.SettingActivityUser$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.tiuadmin.simplysafeconusmerapp.User.SettingActivityUser$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.tiuadmin.simplysafeconusmerapp.User.SettingActivityUser$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
